# Sipher-DDGI

./: CLAUDE.md  CMakeLists.txt
.claude/: architecture-review.md  radiance-cache-architecture-review.md  radiance-cache-architecture.md  radiance-cache-stability-fix.md  radiance-cache-stability-research.md  ralph-loop.local.md  settings.json  shader-precompile-plan.md  sharc-implementation-notes.md
.claude/commands/: dev-loop.md  visual-debug.md
.claude/skills/: dev-loop.md
docs/: Enshrouded_GI_Analysis.md
rtxgi-sdk/shaders/ddgi/include/: ProbeIndexing.hlsl
rtxgi-sdk/src/ddgi/gfx/: DDGIVolume_D3D12.cpp
samples/test-harness/: CMakeLists.txt  shaders.json
samples/test-harness/config/: cornell.ini  sponza.ini
samples/test-harness/include/: AppLogger.h  Configs.h  Direct3D12.h
samples/test-harness/include/graphics/: DDGI.h  DDGI_D3D12.h  DDGI_VK.h  GBuffer_D3D12.h  GBuffer_VK.h  PathTracing_VK.h  RTAO_VK.h  Types.h
samples/test-harness/shaders/: Composite.hlsl  GBufferCS.hlsl  IndirectCS.hlsl  PathTraceCS.hlsl  RTAOTraceCS.hlsl
samples/test-harness/shaders/ddgi/: ProbeRayResolveCS.hlsl  ProbeTraceCS.hlsl  ProbeTraceRGS.hlsl  RadianceCacheCS.hlsl  RadianceCacheRGS.hlsl
samples/test-harness/shaders/include/: Common.hlsl  Descriptors.hlsl  InlineLighting.hlsl  InlineRayTracingCommon.hlsl  RadianceCommon.hlsl  SHCommon.hlsl  SHLighting.hlsl  SpatialHash.hlsl
samples/test-harness/shaders/tests/: InlineRayTracingSelfTest.hlsl  InlineRayTracingUnitTest.hlsl
samples/test-harness/src/: Configs.cpp  Direct3D12.cpp  ImageCapture.cpp  Shaders.cpp  UI.cpp  main.cpp
samples/test-harness/src/graphics/: Composite_D3D12.cpp  DDGI_D3D12.cpp  DDGI_VK.cpp  GBuffer_D3D12.cpp  GBuffer_VK.cpp  (+2 more)
tools/ShaderCompiler/: CMakeLists.txt  Compiler.cpp  Compiler.h  Hash.h  HashCache.cpp  HashCache.h  IncludeParser.cpp  IncludeParser.h  Logger.cpp  Logger.h  ShaderManifest.cpp  ShaderManifest.h  main.cpp
(+2 files in other folders)
